--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "audio-separator[gpu]>=0.36.1",
     "openai-whisper>=20250625",
     "whisper-timestamped>=1.15.8",
 ]
