--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "audio-separator[gpu]>=0.36.1",
+    "gradio>=5.49.0",
     "openai-whisper>=20250625",
     "whisper-timestamped>=1.15.8",
 ]
